add include path for lib3ds.h

--- a/LDExporter/Makefile
+++ b/LDExporter/Makefile
@@ -1,11 +1,11 @@
 EXECS= libLDExporter$(POSTFIX).a
-CFLAGSLOC = -O3 
+CFLAGSLOC = -O3 -I ../3rdParty/lib3ds
 LIBDIRS =
 HOSTLIBS =
 
 -include ../Makefile.inc
 
-debug: CFLAGSLOC = -g
+debug: CFLAGSLOC = -g -I ../3rdParty/lib3ds
 debug: all
 
 -include .depend
