add include path for tinyxml

--- a/LDExporter/Makefile
+++ b/LDExporter/Makefile
@@ -1,11 +1,11 @@
 EXECS= libLDExporter$(POSTFIX).a
-CFLAGSLOC = -O3 -I ../3rdParty/lib3ds
+CFLAGSLOC = -O3 -I ../3rdParty/lib3ds -I ../3rdParty/tinyxml
 LIBDIRS =
 HOSTLIBS =
 
 -include ../Makefile.inc
 
-debug: CFLAGSLOC = -g -I ../3rdParty/lib3ds
+debug: CFLAGSLOC = -g -I ../3rdParty/lib3ds -I ../3rdParty/tinyxml
 debug: all
 
 -include .depend
