update Categories, remove extension of icon

--- a/QT/desktop/ldraw.desktop
+++ b/QT/desktop/ldraw.desktop
@@ -3,9 +3,9 @@ Encoding=UTF-8
 Name=LDView
 GenericName=LDraw model viewer
 Comment=LDraw Model Viewer
-Exec=/usr/local/bin/LDView %f
-Icon=gnome-ldraw.png
+Exec=/usr/bin/LDView %f
+Icon=gnome-ldraw
 Terminal=false
 Type=Application
 MimeType=application/x-ldraw;application/x-multipart-ldraw;
-Categories=Graphics;
+Categories=Graphics;3DGraphics;Viewer;
