--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -15,13 +15,16 @@ else
 CFLAGS += -O2
 endif
 
+NOBOOST = `if [ ! -f /usr/lib/libboost_thread.so ] ; then echo 'DEFINES+=_NO_BOOST' ; fi`
+
 build: build-stamp
 build-stamp:
 	dh_testdir
 
 	# Add here commands to compile the package.
+	if [ ! -f /usr/lib/libtinyxml.a ] ; then cd 3rdParty/tinyxml ; make -f Makefile.pbartfai ; cp -f libtinyxml.a ../../lib ; fi
 	cd OSMesa ; make all
-	cd QT ; if [ `uname -m` = "x86_64" ] ; then qmake-qt4 -config release -spec linux-g++-64 ; else qmake-qt4 -config release -spec linux-g++-32 ; fi ; lrelease-qt4 LDView.pro ; make all
+	cd QT ; if [ `uname -m` = "x86_64" ] ; then qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; else qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; fi ; lrelease-qt4 LDView.pro ; make all
 	cd QT/kde ; mkdir -p build ; cd build ; cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; make all
 	# --- end custom part for compiling
 
@@ -33,6 +36,7 @@ clean:
 	rm -f build-stamp
 
 	# Add here commands to clean up after the build process.
+	cd 3rdParty/tinyxml ; make -f Makefile.pbartfai clean || true
 	cd QT ; qmake-qt4 ; make clean || true
 	cd OSMesa ; make clean || true
 	cd QT/kde ; if [ -d build ]; then rm -rf build ; fi
@@ -106,3 +110,4 @@ binary-arch: build install
 
 binary: binary-indep binary-arch
 .PHONY: build clean binary-indep binary-arch binary install
+
