--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -19,8 +19,14 @@ build() {
   make -f Makefile.pbartfai
   cp -f libtinyxml.a ../../lib
   cd ${srcdir}/LDView/QT
-  if [ -x /usr/bin/qmake ] ; then qmake LIBS+=-lboost_system ; lrelease LDView.pro ; fi
-  if [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 LIBS+=-lboost_system ; lrelease-qt4 LDView.pro ; fi
+  if test "$CARCH" == x86_64; 
+  then
+    PLATFORM=linux-g++-64
+  else
+    PLATFORM=linux-g++-32
+  fi
+  if [ -x /usr/bin/qmake ] ; then qmake LIBS+=-lboost_system -spec $PLATFORM ; lrelease LDView.pro ; fi
+  if [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 LIBS+=-lboost_system -spec $PLATFORM ; lrelease-qt4 LDView.pro ; fi
   make
   cd kde
   if [ -d build ]; then rm -rf build ; fi
