--- a/TRE/TRE.vcproj
+++ b/TRE/TRE.vcproj
@@ -46,7 +46,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -117,7 +117,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -186,7 +186,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -258,7 +258,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -332,7 +332,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -405,7 +405,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -476,7 +476,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -548,7 +548,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -621,7 +621,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -694,7 +694,7 @@
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -764,7 +764,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_NO_BOOST"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -836,7 +836,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..,../include,../boost/include"
+				AdditionalIncludeDirectories="..,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_NO_BOOST"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
