--- a/LDLib/LDLib.vcproj
+++ b/LDLib/LDLib.vcproj
@@ -48,7 +48,7 @@
 				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -118,7 +118,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -190,7 +190,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -259,7 +259,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;TC_NO_UNICODE;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -333,7 +333,7 @@
 				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -403,7 +403,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;_NO_BOOST;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -478,7 +478,7 @@
 				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -549,7 +549,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -622,7 +622,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -692,7 +692,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;TC_NO_UNICODE;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -767,7 +767,7 @@
 				InlineFunctionExpansion="1"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;_TC_STATIC;TC_NO_UNICODE;EXPORT_3DS"
 				StringPooling="true"
 				RuntimeLibrary="0"
@@ -838,7 +838,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../,../include,../boost/include"
+				AdditionalIncludeDirectories="../,../include,../gl2ps,../boost/include"
 				PreprocessorDefinitions="_DEBUG;WIN32;_LIB;_TC_STATIC;_LOG_PERFORMANCE;_NO_BOOST;EXPORT_3DS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
