--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -16,6 +16,7 @@ CFLAGS += -O2
 endif
 
 NOBOOST = `if [ ! -f /usr/lib/libboost_thread.so ] ; then echo 'DEFINES+=_NO_BOOST' ; fi`
+TESTING := $(shell if [ ! -f /usr/include/gl2ps.h ] ; then echo -I ../gl2ps -L ../gl2ps ; fi; if [ ! -f /usr/include/tinyxml.h ] ; then echo -I ../3rdParty/tinyxml ; fi)
 
 build: build-stamp
 build-stamp:
@@ -23,8 +24,9 @@ build-stamp:
 
 	# Add here commands to compile the package.
 	if [ ! -f /usr/lib/libtinyxml.a ] ; then cd 3rdParty/tinyxml ; make -f Makefile.pbartfai ; cp -f libtinyxml.a ../../lib ; fi
-	cd OSMesa ; make all
-	cd QT ; if [ `uname -m` = "x86_64" ] ; then qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; else qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; fi ; lrelease-qt4 LDView.pro ; make all
+	if [ ! -f /usr/include/gl2ps.h ] ; then cd gl2ps ; make ; cp -f libgl2ps.a ../lib ; fi
+	cd OSMesa ; export TESTING="$(TESTING)" ; make all
+	cd QT ; export TESTING="$(TESTING)" ; if [ `uname -m` = "x86_64" ] ; then qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; else qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; fi ; lrelease-qt4 LDView.pro ; make all
 	cd QT/kde ; mkdir -p build ; cd build ; cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; make all
 	# --- end custom part for compiling
 
