--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -23,11 +23,29 @@ build-stamp:
 	dh_testdir
 
 	# Add here commands to compile the package.
-	if [ ! -f /usr/lib/libtinyxml.a ] ; then cd 3rdParty/tinyxml ; make -f Makefile.pbartfai ; cp -f libtinyxml.a ../../lib ; fi
-	if [ ! -f /usr/include/gl2ps.h ] ; then cd gl2ps ; make ; cp -f libgl2ps.a ../lib ; fi
+	if [ ! -f /usr/lib/libtinyxml.a ] ; then \
+		cd 3rdParty/tinyxml ; \
+		make -f Makefile.pbartfai ; \
+		cp -f libtinyxml.a ../../lib ; \
+	fi
+	if [ ! -f /usr/include/gl2ps.h ] ; then \
+		cd gl2ps ; \
+		make ; \
+		cp -f libgl2ps.a ../lib ; \
+	fi
 	cd OSMesa ; export TESTING="$(TESTING)" ; make all
-	cd QT ; export TESTING="$(TESTING)" ; if [ `uname -m` = "x86_64" ] ; then qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; else qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; fi ; lrelease-qt4 LDView.pro ; make all
-	cd QT/kde ; mkdir -p build ; cd build ; cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; make all
+	cd QT ; \
+	export TESTING="$(TESTING)" ; \
+	if [ `uname -m` = "x86_64" ] ; then \
+		qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; \
+	else \
+		qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; \
+	fi ; \
+	lrelease-qt4 LDView.pro ; \
+	make all
+	cd QT/kde ; mkdir -p build ; cd build ; \
+	cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; \
+	make all
 	# --- end custom part for compiling
 
 	touch build-stamp
@@ -63,6 +81,7 @@ install: build
 	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/pixmaps/
 	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/icons/gnome/32x32/mimetypes
 	mkdir -p /usr/src/packages/BUILD/debian/ldview/etc/gconf/schemas
+	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1
 	install -m 644 QT/desktop/ldraw.mime /usr/src/packages/BUILD/debian/ldview/usr/share/mime-info/ldraw.mime
 	install -m 644 QT/desktop/ldraw.xml  /usr/src/packages/BUILD/debian/ldview/usr/share/mime/packages/ldraw.xml
 	install -m 644 QT/desktop/ldraw.keys /usr/src/packages/BUILD/debian/ldview/usr/share/mime-info/ldraw.keys
@@ -76,6 +95,10 @@ install: build
 	install -m 644 QT/desktop/ldraw.schemas /usr/src/packages/BUILD/debian/ldview/etc/gconf/schemas/ldraw.schemas
 	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/kde4/services
 	install -m 644 QT/kde/ldviewthumbnailcreator.desktop /usr/src/packages/BUILD/debian/ldview/usr/share/kde4/services/ldviewthumbnailcreator.desktop
+	install -m 644 QT/LDView.1 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/LDView.1
+	gzip -f -9 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/LDView.1
+	install -m 644 QT/desktop/ldraw-thumbnailer.1 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/ldraw-thumbnailer.1
+	gzip -f -9 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/ldraw-thumbnailer.1
 	# --- end custom part for installing
 
 # Build architecture-independent files here.
