--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1
 pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://sourceforge.net/projects/ldview"
 arch=('x86_64' 'i686')
-license=('GPLv3')
+license=('GPL')
 depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'boost')
 makedepends=('cmake' 'kdelibs' 'phonon-vlc' 'automoc4')
 conflicts=()
