--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -17,33 +17,40 @@ endif
 
 NOBOOST = `if [ ! -f /usr/lib/libboost_thread.so ] ; then echo 'DEFINES+=_NO_BOOST' ; fi`
 TESTING := $(shell if [ ! -f /usr/include/gl2ps.h ] ; then echo -I ../gl2ps -L ../gl2ps ; fi; if [ ! -f /usr/include/tinyxml.h ] ; then echo -I ../3rdParty/tinyxml ; fi)
-
+DEST=/usr/src/packages/BUILD/debian/ldview
 build: build-stamp
 build-stamp:
 	dh_testdir
 
 	# Add here commands to compile the package.
+	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	if [ ! -f /usr/lib/libtinyxml.a ] ; then \
-		cd 3rdParty/tinyxml ; \
-		make -f Makefile.pbartfai ; \
-		cp -f libtinyxml.a ../../lib ; \
-	fi
-	if [ ! -f /usr/include/gl2ps.h ] ; then \
-		cd gl2ps ; \
-		make ; \
-		cp -f libgl2ps.a ../lib ; \
-	fi
-	cd OSMesa ; export TESTING="$(TESTING)" ; make all
-	cd QT ; \
-	export TESTING="$(TESTING)" ; \
-	if [ `uname -m` = "x86_64" ] ; then \
-		qmake-qt4 -config release -spec linux-g++-64 $(NOBOOST) ; \
-	else \
-		qmake-qt4 -config release -spec linux-g++-32 $(NOBOOST) ; \
-	fi ; \
-	lrelease-qt4 LDView.pro ; \
-	make all
-	cd QT/kde ; mkdir -p build ; cd build ; \
+		cd 3rdParty/tinyxml ;            \
+		make -f Makefile.pbartfai ;      \
+		cp -f libtinyxml.a ../../lib ;   \
+		cd ../.. ;                       \
+	fi ;                                     \
+	if [ ! -f /usr/include/gl2ps.h ] ; then  \
+		cd gl2ps ;                       \
+		make ;                           \
+		cp -f libgl2ps.a ../lib ;        \
+		cd .. ;                          \
+	fi ;                                     \
+	cd OSMesa ;                              \
+	export TESTING="$(TESTING)" ;            \
+	make all ;                               \
+	cd ../QT ;                               \
+	export TESTING="$(TESTING)" ;            \
+	if [ `uname -m` = "x86_64" ] ; then      \
+		qmake-qt4 -config release        \
+		 -spec linux-g++-64 $(NOBOOST) ; \
+	else                                     \
+		qmake-qt4 -config release        \
+		 -spec linux-g++-32 $(NOBOOST) ; \
+	fi ;                                     \
+	lrelease-qt4 LDView.pro ;                \
+	make all ;                               \
+	cd kde ; mkdir -p build ; cd build ;     \
 	cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; \
 	make all
 	# --- end custom part for compiling
@@ -56,9 +63,11 @@ clean:
 	rm -f build-stamp
 
 	# Add here commands to clean up after the build process.
+	if [ -f LDView.pro ] ; then cd .. ; fi ; \
 	cd 3rdParty/tinyxml ; make -f Makefile.pbartfai clean || true
-	cd QT ; qmake-qt4 ; make clean || true
-	cd OSMesa ; make clean || true
+	if [ -f LDView.pro ] ; then cd .. ; fi ; \
+	cd QT ; qmake-qt4 ; make clean || true ; cd .. ;\
+	cd OSMesa ; make clean || true ; cd .. ; \
 	cd QT/kde ; if [ -d build ]; then rm -rf build ; fi
 	# --- end custom part for cleaning up
 	dh_clean
@@ -71,34 +80,49 @@ install: build
 
 	# Add here commands to install the package
 	# The DESTDIR Has To Be Exactly  /usr/src/packages/BUILD/debian/<nameOfPackage>
-	cd QT ; make INSTALL_ROOT=/usr/src/packages/BUILD/debian/ldview install
-	cp -f OSMesa/ldview /usr/src/packages/BUILD/debian/ldview/usr/bin/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/mime-info/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/mime/packages/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/application-registry/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/applications/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/thumbnailers/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/pixmaps/
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/icons/gnome/32x32/mimetypes
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/etc/gconf/schemas
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1
-	install -m 644 QT/desktop/ldraw.mime /usr/src/packages/BUILD/debian/ldview/usr/share/mime-info/ldraw.mime
-	install -m 644 QT/desktop/ldraw.xml  /usr/src/packages/BUILD/debian/ldview/usr/share/mime/packages/ldraw.xml
-	install -m 644 QT/desktop/ldraw.keys /usr/src/packages/BUILD/debian/ldview/usr/share/mime-info/ldraw.keys
-	install -m 644 QT/desktop/ldview.applications /usr/src/packages/BUILD/debian/ldview/usr/share/application-registry/ldview.applications
-	install -m 644 QT/desktop/ldraw.desktop /usr/src/packages/BUILD/debian/ldview/usr/share/applications/ldraw.desktop
-	install -m 644 QT/desktop/ldview.thumbnailer /usr/src/packages/BUILD/debian/ldview/usr/share/thumbnailers/ldview.thumbnailer
-	install -m 755 QT/desktop/ldraw-thumbnailer /usr/src/packages/BUILD/debian/ldview/usr/bin/ldraw-thumbnailer
-	install -m 644 QT/images/LDViewIcon.png /usr/src/packages/BUILD/debian/ldview/usr/share/pixmaps/gnome-ldraw.png
-	install -m 644 QT/images/LDViewIcon.png /usr/src/packages/BUILD/debian/ldview/usr/share/icons/gnome/32x32/mimetypes/gnome-mime-application-x-ldraw.png
-	install -m 644 QT/images/LDViewIcon.png /usr/src/packages/BUILD/debian/ldview/usr/share/icons/gnome/32x32/mimetypes/gnome-mime-application-x-multipart-ldraw.png
-	install -m 644 QT/desktop/ldraw.schemas /usr/src/packages/BUILD/debian/ldview/etc/gconf/schemas/ldraw.schemas
-	mkdir -p /usr/src/packages/BUILD/debian/ldview/usr/share/kde4/services
-	install -m 644 QT/kde/ldviewthumbnailcreator.desktop /usr/src/packages/BUILD/debian/ldview/usr/share/kde4/services/ldviewthumbnailcreator.desktop
-	install -m 644 QT/LDView.1 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/LDView.1
-	gzip -f -9 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/LDView.1
-	install -m 644 QT/desktop/ldraw-thumbnailer.1 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/ldraw-thumbnailer.1
-	gzip -f -9 /usr/src/packages/BUILD/debian/ldview/usr/share/man/man1/ldraw-thumbnailer.1
+	if [ -f LDView.pro ] ; then cd .. ; fi ; \
+	cd QT ; make INSTALL_ROOT=$(DEST) install              ;\
+	cd ..                                                  ;\
+	cp -f OSMesa/ldview $(DEST)/usr/bin/                   ;\
+	mkdir -p $(DEST)/usr/share/mime-info/                  ;\
+	mkdir -p $(DEST)/usr/share/mime/packages/              ;\
+	mkdir -p $(DEST)/usr/share/application-registry/       ;\
+	mkdir -p $(DEST)/usr/share/applications/               ;\
+	mkdir -p $(DEST)/usr/share/thumbnailers/               ;\
+	mkdir -p $(DEST)/usr/share/pixmaps/                    ;\
+	mkdir -p $(DEST)/usr/share/icons/gnome/32x32/mimetypes ;\
+	mkdir -p $(DEST)/etc/gconf/schemas                     ;\
+	mkdir -p $(DEST)/usr/share/man/man1                    ;\
+	install -m 644 QT/desktop/ldraw.mime                    \
+		$(DEST)/usr/share/mime-info/ldraw.mime         ;\
+	install -m 644 QT/desktop/ldraw.xml                     \
+		$(DEST)/usr/share/mime/packages/ldraw.xml      ;\
+	install -m 644 QT/desktop/ldraw.keys                    \
+		$(DEST)/usr/share/mime-info/ldraw.keys         ;\
+	install -m 644 QT/desktop/ldview.applications           \
+		$(DEST)/usr/share/application-registry/ldview.applications ;\
+	install -m 644 QT/desktop/ldraw.desktop                 \
+		$(DEST)/usr/share/applications/ldraw.desktop   ;\
+	install -m 644 QT/desktop/ldview.thumbnailer            \
+		$(DEST)/usr/share/thumbnailers/ldview.thumbnailer;\
+	install -m 755 QT/desktop/ldraw-thumbnailer             \
+		$(DEST)/usr/bin/ldraw-thumbnailer              ;\
+	install -m 644 QT/images/LDViewIcon.png                 \
+		$(DEST)/usr/share/pixmaps/gnome-ldraw.png      ;\
+	install -m 644 QT/images/LDViewIcon.png                 \
+		$(DEST)/usr/share/icons/gnome/32x32/mimetypes/gnome-mime-application-x-ldraw.png ;\
+	install -m 644 QT/images/LDViewIcon.png                 \
+		$(DEST)/usr/share/icons/gnome/32x32/mimetypes/gnome-mime-application-x-multipart-ldraw.png ;\
+	install -m 644 QT/desktop/ldraw.schemas                 \
+		$(DEST)/etc/gconf/schemas/ldraw.schemas        ;\
+	mkdir -p $(DEST)/usr/share/kde4/services               ;\
+	install -m 644 QT/kde/ldviewthumbnailcreator.desktop $(DEST)/usr/share/kde4/services/ldviewthumbnailcreator.desktop ;\
+	install -m 644 QT/LDView.1                              \
+		$(DEST)/usr/share/man/man1/LDView.1            ;\
+	gzip -f -9 $(DEST)/usr/share/man/man1/LDView.1         ;\
+	install -m 644 QT/desktop/ldraw-thumbnailer.1           \
+		$(DEST)/usr/share/man/man1/ldraw-thumbnailer.1 ;\
+	gzip -f -9 $(DEST)/usr/share/man/man1/ldraw-thumbnailer.1
 	# --- end custom part for installing
 
 # Build architecture-independent files here.
