--- a/QT/debian/control
+++ b/QT/debian/control
@@ -2,14 +2,12 @@ Source: ldview
 Section: graphics
 Maintainer: Peter Bartfai <pbartfai@stardust.hu>
 Priority: optional
-Build-Depends: debhelper (>= 7.4.3), qt4-qmake, libqt4-opengl-dev,
- libboost-dev, libboost-thread-dev, zlib1g-dev, libgl2ps-dev, libpng12-dev,
- libjpeg8-dev, libtinyxml-dev
+Build-Depends: debhelper (>= 4.1.6), gcc, make, g++, libqt4-dev, cmake, kdelibs5-dev, libgl1-mesa-dev, freeglut3-dev, libboost-dev, libpng12-dev
 Homepage: http://ldview.sourceforge.net/
 Standards-Version: 3.9.4
 
 Package: ldview
-Architecture: i386
+Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Real-time 3D viewer for displaying LDraw models
  LDView is a real-time 3D viewer for displaying LDraw models using 
