--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -153,6 +153,7 @@ binary-arch: build install
 	dh_installcron
 	dh_installman
 	dh_installinfo
+	dh_gconf
 #	dh_undocumented
 	dh_installchangelogs
 	dh_link
