Detect presence of tinyxml and gl2ps in make/qmake systems instead of RPM spec file

--- a/LDLib/Makefile
+++ b/LDLib/Makefile
@@ -1,11 +1,11 @@
 EXECS= libLDraw$(POSTFIX).a
-CFLAGSLOC = -O3
+CFLAGSLOC = -O3 ${GL2PS}
 LIBDIRS =
 HOSTLIBS =
 
 -include ../Makefile.inc
 
-debug: CFLAGSLOC = -g
+debug: CFLAGSLOC = -g ${GL2PS}
 debug: all
 
 -include .depend
