--- a/QT/debian/rules
+++ b/QT/debian/rules
@@ -17,7 +17,7 @@ endif
 
 NOBOOST = `if [ ! -f /usr/lib/libboost_thread.so ] ; then echo 'DEFINES+=_NO_BOOST' ; fi`
 TESTING := $(shell if [ ! -f /usr/include/gl2ps.h ] ; then echo -I ../gl2ps -L ../gl2ps ; fi; if [ ! -f /usr/include/tinyxml.h ] ; then echo -I ../3rdParty/tinyxml ; fi)
-DEST=$(shell if [ -d /usr/src/packages/BUILD/debian/ldview ] ; then echo /usr/src/packages/BUILD/debian/ldview ; else echo debian/ldview ; fi )
+DEST=$(shell if [ -d /usr/src/packages/BUILD/QT/LDView.pro ] ; then echo /usr/src/packages/BUILD/debian/ldview ; else echo debian/ldview ; fi )
 export Q_LDFLAGS="-Wl,-z,relro"
 
 build-arch: build
