--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://sourceforge.net/projects/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
-depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'boost')
+depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'libgl' 'boost')
 makedepends=('cmake' 'kdelibs' 'automoc4' 'phonon-gstreamer' 'glu')
 conflicts=()
 replaces=()
