--- a/QT/debian/control
+++ b/QT/debian/control
@@ -10,14 +10,17 @@ Package: ldview
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Real-time 3D viewer for displaying LDraw models
- LDView is a real-time 3D viewer for displaying LDraw models using 
- hardware-accellerated 3D graphics. It was written using OpenGL, so should be 
- accellerated on any video card which provides full OpenGL 3D acceleration 
- (so-called mini-drivers are not likely to work). It should also work on other 
- video cards using OpenGL software rendering, albeit at a much slower speed. 
- For information on LDraw, please visit www.ldraw.org, the centralized LDraw 
- information site.  The program can read LDraw DAT files as well as MPD files. 
- It then allows you to rotate the model around to any angle with themouse. A 
- fast computer or a video card with T&L support (Transform & Lighting) is 
- strongly recommended for displaying complexmodels.
+ LDView is a real-time 3D viewer for displaying LDraw models using
+ hardware-accelerated 3D graphics. LDView is capable of reading LDraw DAT,
+ LDR and MPD files as well as parse subassemblies for the latter,
+ using the multipart tools menu. You can view and rotate the model around
+ to any angle using the mouse or keyboard. LDView was written using OpenGL:
+ it should provide accelerated rendering on any video card capable of
+ full OpenGL 3D acceleration (so-called 'mini-drivers' are not likely to work).
+
+ It should also work on other video cards using OpenGL software rendering,
+ albeit at a much slower speed. A  fast computer or a dedicated video card
+ with T&L support (Transform & Lighting) is strongly recommended
+ for displaying complex models. For information on LDraw,
+ please visit www.ldraw.org, the centralized LDraw resources site.
 
