Fix Unicode-related problems with LDConsoleAlertHandler.

--- a/LDViewMessages.ini
+++ b/LDViewMessages.ini
@@ -92,7 +92,9 @@ FsaaNx =%dx
 <None> =<None>
 PrefSetApplyBeforeLeave0 =You must apply your changes before you can leave this 
 PrefSetApplyBeforeLeave1 =tab.
+CriticalError =Critical Error
 Error =Error
+Warning =Warning
 ; WARNING: The filename you choose for your help file cannot contain any
 ; characters outside the Windows Latin 1 character set.
 LDView.hlp =LDView.hlp
