Enhance OSMesa Makfile rule test to check LDraw directory setting in in file

--- a/OSMesa/Makefile
+++ b/OSMesa/Makefile
@@ -169,11 +169,41 @@ debug: CFLAGSLOC = -g -DUNZIP_CMD
 debug: MAKEMODE = debug POSTFIX=-osmesa
 debug: all
 
-test:
-	if [ ! -f ~/.ldviewrc ] ; then      \
-		cp ldviewrc.sample ~/.ldviewrc; \
+test: ldview
+	@if [ ! -f ~/.ldviewrc  ] ; then                      \
+		if [ ! -f ~/.config/LDView/ldviewrc ] ; then      \
+			cp ldviewrc.sample ~/.ldviewrc;               \
+			echo Default .ldviewrc created;               \
+		fi                                                \
 	fi
+	@if [ -f ~/.ldviewrc ] ; then                                        \
+		if [ -d "`grep ^LDrawDir ~/.ldviewrc | cut -f2 -d=`" ] ; then    \
+			echo LDraw dir \(~/.ldviewrc\):                              \
+				`grep ^LDrawDir ~/.ldviewrc | cut -f2 -d=` ;             \
+		else                                                             \
+			echo ERROR LDraw dir                                         \
+				`grep ^LDrawDir ~/.ldviewrc | cut -f2 -d=`               \
+				not found \(~/.ldviewrc\) ;                              \
+			exit 1;                                                      \
+		fi                                                               \
+	elif [ -f ~/.config/LDView/ldviewrc ] ; then                         \
+		if [ -d "`grep ^LDrawDir ~/.config/LDView/ldviewrc | cut -f2 -d=`" ] ; then   \
+			echo LDraw dir \(~/.config/LDView/ldviewrc\):                \
+			`grep ^LDrawDir ~/.config/LDView/ldviewrc | cut -f2 -d=`;    \
+		else                                                             \
+			echo ERROR LDraw dir                                         \
+				`grep ^LDrawDir ~/.config/LDView/ldviewrc | cut -f2 -d=` \
+				not found \(~/.config/LDView/ldviewrc\);                 \
+			exit 1;                                                      \
+		fi                                                               \
+	elif [ -d /usr/share/ldraw ] ; then                                  \
+		echo LDraw dir default: /usr/share/ldraw ;                       \
+	else                                                                 \
+		echo LDraw dir not found ;                                       \
+		exit 1;                                                          \
+	fi
+	@if [ -f /tmp/8464.png ] ; then rm -f /tmp/8464.png ; fi
 	./ldview ../8464.mpd -SaveSnapshot=/tmp/8464.png \
 	-SaveWidth=128 -SaveHeight=128 -ShowErrors=0 -SaveActualSize=0
-	file /tmp/8464.png
+	@file /tmp/8464.png
 
