Lauch image viewer after test file created

--- a/OSMesa/Makefile
+++ b/OSMesa/Makefile
@@ -206,4 +206,10 @@ test: ldview
 	./ldview ../8464.mpd -SaveSnapshot=/tmp/8464.png \
 	-SaveWidth=128 -SaveHeight=128 -ShowErrors=0 -SaveActualSize=0
 	@file /tmp/8464.png
+	@for a in eog gthumb ; do 						\
+		if which $$a >/dev/null 2>/dev/null ; then  \
+			$$a /tmp/8464.png; 						\
+			break ;									\
+		fi											\
+	done
 
