Fix typos in PovFindReplacements tooltip.

--- a/LDExporter/LDExportMessages.ini
+++ b/LDExporter/LDExportMessages.ini
@@ -15,9 +15,9 @@ LDXResetGroup =Reset Group
 PovErrorCreatingPov =Error creating POV file.\n
 PovTypeDescription =POV: POV-Ray Scene File
 PovFindReplacements =Search for POV replacements for LDraw parts
-PovFindReplacementsTT1 =If you check this, you can put POV include files in a POV subdirectory of your POV directory and 
+PovFindReplacementsTT1 =If you check this, you can put POV include files in a pov subdirectory of your LDraw directory and 
 PovFindReplacementsTT2 =have LDView use those as replacements for part files.  In order for this to work, you must put your part files 
-PovFindReplacementsTT3 =in the <LDraw directory>/POV/parts directory, and put your primitive files in the <LDraw directory>/POV/p 
+PovFindReplacementsTT3 =in the <LDraw directory>/pov/parts directory, and put your primitive files in the <LDraw directory>/pov/p 
 PovFindReplacementsTT4 =directory.  Give them the same filename as the LDraw file, but replace the .dat extension with .inc.
 PovXmlMap =Use XML mapping file
 PovXmlMapTT1 =Check this to have LDView use the specified XML mapping file to find POV replacements for LDraw parts.  LDView's 
