--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -7,7 +7,7 @@ url="http://sourceforge.net/projects/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
 depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'libgl' 'boost')
-makedepends=('cmake' 'kdelibs' 'automoc4' 'phonon-gstreamer' 'glu')
+makedepends=('cmake' 'kdelibs' 'automoc4' 'phonon-qt4-gstreamer' 'glu')
 conflicts=()
 replaces=()
 backup=()
